--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@angular/platform-browser": "~10.0.11",
     "@angular/platform-browser-dynamic": "~10.0.11",
     "@angular/router": "~10.0.11",
+    "@asymmetrik/ngx-leaflet": "^8.1.0",
     "@fortawesome/angular-fontawesome": "^0.5.0",
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
+    "leaflet": "^1.7.1",
     "material-design-icons": "^3.0.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.2",
@@ -38,9 +40,10 @@
     "@angular/cli": "~10.0.6",
     "@angular/compiler-cli": "~10.0.11",
     "@angular/language-service": "~10.0.11",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/leaflet": "^1.5.19",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
