--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jquery": "^3.4.1",
     "leaflet": "^1.7.1",
     "material-design-icons": "^3.0.1",
+    "ng-image-fullscreen-view": "^2.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.2",
     "tslib": "^2.0.0",
