--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@ngxs/storage-plugin": "^3.7.2",
+    "@ngxs/store": "^3.7.2",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
     "leaflet": "^1.7.1",
     "material-design-icons": "^3.0.1",
     "ng-image-fullscreen-view": "^2.0.0",
+    "ngxs-reset-plugin": "^1.4.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.2",
     "tslib": "^2.0.0",
@@ -41,6 +44,7 @@
     "@angular/cli": "~10.0.6",
     "@angular/compiler-cli": "~10.0.11",
     "@angular/language-service": "~10.0.11",
+    "@ngxs/devtools-plugin": "^3.7.2",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/leaflet": "^1.5.19",
