--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/compiler": "~10.0.11",
     "@angular/core": "~10.0.11",
     "@angular/forms": "~10.0.11",
+    "@angular/localize": "~10.0.11",
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~10.0.11",
     "@angular/platform-browser-dynamic": "~10.0.11",
@@ -26,6 +27,7 @@
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@ng-bootstrap/ng-bootstrap": "^8.0.4",
     "@ngxs/storage-plugin": "^3.7.2",
     "@ngxs/store": "^3.7.2",
     "bootstrap": "^4.4.1",
@@ -33,6 +35,7 @@
     "leaflet": "^1.7.1",
     "material-design-icons": "^3.0.1",
     "ng-image-fullscreen-view": "^2.0.0",
+    "ngb-modal": "^2.0.3",
     "ngxs-reset-plugin": "^1.4.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.2",
