--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ngxs/storage-plugin": "^3.7.2",
     "@ngxs/store": "^3.7.2",
     "bootstrap": "^4.4.1",
+    "guid-typescript": "^1.0.9",
     "jquery": "^3.4.1",
     "leaflet": "^1.7.1",
     "material-design-icons": "^3.0.1",
