--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "leaflet": "^1.7.1",
     "material-design-icons": "^3.0.1",
     "ng-image-fullscreen-view": "^2.0.0",
+    "ng-image-slider": "^2.8.0",
     "ngb-modal": "^2.0.3",
     "ngxs-reset-plugin": "^1.4.0",
     "popper.js": "^1.16.1",
