change search css

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,9 @@
     {
       "path": "./tsconfig.spec.json"
     }
-  ]
+  ],
+  "compilerOptions": {
+    "experimentalDecorators": true,
+    "allowJs": true
+  }
 }
