--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@microsoft/signalr": "^5.0.9",
     "@ng-bootstrap/ng-bootstrap": "^8.0.4",
+    "@ngrx/effects": "^12.4.0",
+    "@ngrx/store": "^12.4.0",
     "@ngxs/storage-plugin": "^3.7.2",
     "@ngxs/store": "^3.7.2",
     "bootstrap": "^4.4.1",
