--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@angular/animations": "~10.0.11",
     "@angular/cdk": "~8.2.3",
     "@angular/common": "~10.0.11",
-    "@angular/compiler": "~10.0.11",
+    "@angular/compiler": "~12.2.0",
     "@angular/core": "~10.0.11",
     "@angular/forms": "~10.0.11",
     "@angular/localize": "~10.0.11",
@@ -30,19 +30,25 @@
     "@microsoft/signalr": "^5.0.9",
     "@ng-bootstrap/ng-bootstrap": "^8.0.4",
     "@ngrx/effects": "^12.4.0",
+    "@ngrx/entity": "^12.4.0",
     "@ngrx/store": "^12.4.0",
+    "@ngrx/store-devtools": "^12.4.0",
     "@ngxs/storage-plugin": "^3.7.2",
     "@ngxs/store": "^3.7.2",
+    "@state-adapt/core": "^0.38.0",
+    "@state-adapt/ngrx": "^0.38.0",
     "bootstrap": "^4.4.1",
     "guid-typescript": "^1.0.9",
     "jquery": "^3.4.1",
     "leaflet": "^1.7.1",
+    "lodash-es": "^4.17.21",
     "material-design-icons": "^3.0.1",
     "ng-image-fullscreen-view": "^2.0.0",
     "ng-image-slider": "^2.8.0",
     "ngb-modal": "^2.0.3",
     "ngxs-reset-plugin": "^1.4.0",
     "popper.js": "^1.16.1",
+    "reselect": "^4.0.0",
     "rxjs": "~6.6.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -68,6 +74,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~6.1.0",
-    "typescript": "~3.9.7"
+    "typescript": "^4.4.3"
   }
 }
