--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,8 +3,7 @@
   "compilerOptions": {
     "outDir": "./dist" /* Redirect output structure to the directory. */,
     "rootDir": "./src", /* Specify the root directory of input files. Use to co*/
-    "experimentalDecorators": true, /* Enables experimental support for ES7 decorators. */
-    "emitDecoratorMetadata": true, /* Enables experimental support for emitting type metadata for decorators. */
+    "experimentalDecorators": true, /* Enables experimental support for emitting type metadata for decorators. */
     "allowJs": true,
     "moduleResolution": "node",
     "types": []
