use ngrx state for search

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "rootDir": "./src", /* Specify the root directory of input files. Use to co*/
     "experimentalDecorators": true, /* Enables experimental support for emitting type metadata for decorators. */
     "allowJs": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "target": "es5"
   }
 }
