--- a/angular.json
+++ b/angular.json
@@ -36,11 +36,15 @@
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/@fortawesome/fontawesome-free/css/all.css",
               "./node_modules/leaflet/dist/leaflet.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "./node_modules/leaflet-geosearch/dist/geosearch.css",
+              "./node_modules/leaflet/dist/leaflet.css"
             ],
             "scripts": [
+              "./node_modules/leaflet-search/dist/leaflet-search.min.js",
               "./node_modules/jquery/dist/jquery.min.js",
-              "./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+              "./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+              "./node_modules/leaflet/dist/leaflet.js"
             ],
             "vendorChunk": true,
             "extractLicenses": false,
@@ -110,7 +114,8 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "./node_modules/leaflet-geosearch/dist/geosearch.css"
             ],
             "scripts": []
           }
