--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^3.0.0-beta.0",
     "@angular/animations": "~12.2.7",
     "@angular/cdk": "~12.2.7",
     "@angular/common": "~12.2.7",
@@ -38,9 +39,13 @@
     "@state-adapt/core": "^0.38.0",
     "@state-adapt/ngrx": "^0.38.0",
     "bootstrap": "^4.4.1",
+    "bootstrap-geocoder": "^1.0.0",
+    "google-maps": "^4.3.3",
     "guid-typescript": "^1.0.9",
     "jquery": "^3.4.1",
     "leaflet": "^1.7.1",
+    "leaflet-geosearch": "^3.5.2",
+    "leaflet-search": "^3.0.2",
     "lodash-es": "^4.17.21",
     "material-design-icons": "^3.0.1",
     "ng-image-fullscreen-view": "^2.0.0",
@@ -59,6 +64,7 @@
     "@angular/compiler-cli": "~12.2.7",
     "@angular/language-service": "~12.2.7",
     "@ngxs/devtools-plugin": "^3.7.2",
+    "@types/googlemaps": "^3.43.3",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/leaflet": "^1.5.19",
