--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -6,7 +6,7 @@
     "experimentalDecorators": true, /* Enables experimental support for emitting type metadata for decorators. */
     "allowJs": true,
     "moduleResolution": "node",
-    "types": []
+    "types": ["googlemaps"]
   },
   "files": [
     "src/main.ts",
